--- a/app/views/spree/checkout/_webpay_ws.html.erb
+++ b/app/views/spree/checkout/_webpay_ws.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="panel-body" data-hook="checkout_payment_step">
     <p>
-      <%= Spree.t(:webpay) %>
+      <%= Spree.t(:webpay_ws) %>
     </p>
     <% unless Rails.env.production? %>
       <span><%= @error %></span>
