--- a/app/views/spree/checkout/payment/_webpay_ws.html.erb
+++ b/app/views/spree/checkout/payment/_webpay_ws.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= Spree.t(:webpay_redirect) %>
+  <%= Spree.t(:webpay_ws_redirect) %>
 </p>
 <% unless Rails.env.production? %>
   Parámetros a enviar a WS pagos:
